--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -5,31 +5,24 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>家庭記事本</title>
-  <link href="https://bootswatch.com/5/united/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js"
+    integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT"
+    crossorigin="anonymous"></script>
+  <script src="https://kit.fontawesome.com/2f4d0d6816.js" crossorigin="anonymous"></script>
 </head>
 
-<body class="bg-light">
-  <header>
-    <nav class="navbar navbar-dark bg-secondary justify-content-between py-2 px-4">
-      <a class="navbar-brand" href="/">
-        {{!-- {{ #if isAuthenticated }}{{ user.name }}'s {{/if}} --}}
-        家庭記事本
-      </a>
-      {{!-- {{ #if isAuthenticated }} --}}
-      <a href="/users/logout" class="btn btn-outline-light">Logout</a>
-      {{!-- {{ else}} --}}
-      <a href="/users/login" class="btn btn-outline-light">Login</a>
-      {{!-- {{/if}} --}}
-    </nav>
-  </header>
-  <main>
-    <div class="container mt-3">
-      {{{body}}}
+<body class="d-flex flex-column h-100 bg-light">
+  {{> header}}
+  <main class="flex-shrink-0" role="main">
+    <div class="album container pt-5">
+      <div class="pt-5">
+        {{> messages}}
+        {{{body}}}
+      </div>
     </div>
   </main>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-    crossorigin="anonymous"></script>
 </body>
 
 </html>
