feat: update views

--- a/views/edit-record.hbs
+++ b/views/edit-record.hbs
@@ -1,6 +1,6 @@
 <form action="/records/{{record.id}}?_method=PUT" method="POST">
   <div class="mb-4 text-center">
-    <h1 class="h3 font-weight-normal mb-3">Edit Record</h1>
+    <h1 class="h3 font-weight-normal mb-3">修改支出</h1>
   </div>
   {{>record-form}}
 </form>
