--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -10,7 +10,7 @@
       <div class="collapse navbar-collapse" id="navbarCollapse">
         <ul class="navbar-nav ms-auto mb-2 mb-md-0">
           <li class="nav-item">
-            <a href="/logout"><button class="btn btn-outline-light my-sm-0 my-2">Logout</button></a>
+            <a href="/logout"><button class="btn btn-outline-light my-sm-0 my-2">登出</button></a>
           </li>
         </ul>
       </div>
