--- a/views/records.hbs
+++ b/views/records.hbs
@@ -51,11 +51,11 @@
       </li>
       <div class="row-auto d-flex justify-content-between m-auto" id="buttons">
         <div class="ms-1" id="edit">
-          <a class="btn btn-outline-success" href="./records/{{ this.id }}/edit">edit</a>
+          <a class="btn btn-outline-success" href="./records/{{ this.id }}/edit">修改</a>
         </div>
         <div class="ms-2" id="delete">
           <form action="./records/{{ this.id }}?_method=DELETE" method="POST" style="display: inline;">
-            <button class="btn btn-outline-danger" type="submit">delete</button>
+            <button class="btn btn-outline-danger" type="submit">刪除</button>
           </form>
         </div>
       </div>
