--- a/views/create-record.hbs
+++ b/views/create-record.hbs
@@ -1,6 +1,6 @@
 <form action="/records" method="POST">
   <div class="mb-4 text-center">
-    <h1 class="h3 font-weight-normal mb-3">Create Record</h1>
+    <h1 class="h3 font-weight-normal mb-3">新增支出</h1>
   </div>
   {{>record-form}}
 </form>
