--- a/views/signin.hbs
+++ b/views/signin.hbs
@@ -1,5 +1,5 @@
 <div class="mb-4 text-center">
-  <h1 class="h3 font-weight-normal mb-3">Sign In</h1>
+  <h1 class="h3 font-weight-normal mb-3">登入</h1>
 </div>
 <form class="form-signin" action="/signin" method="POST">
   <div class="form-row mb-3">
@@ -12,8 +12,8 @@
     <input class="form-control" id="password" type="password" name="password" class="form-control"
       placeholder="Password" required>
   </div>
-  <button class="btn btn-secondary btn-block" type="submit">Submit</button>
+  <button class="btn btn-secondary btn-block" type="submit">登入</button>
 </form>
 <div class="mb-4 text-center">
-  <p><a href="/signup">Sign Up</a></p>
+  <p><a href="/signup">註冊</a></p>
 </div>
